extends Node


func _on_office_computer_pressed() -> void:
	pass # Replace with function body.


func _on_kitchen_computer_pressed() -> void:
	pass # Replace with function body.


func _on_big_office_computer_1_pressed() -> void:
	pass # Replace with function body.


func _on_big_office_computer_2_pressed() -> void:
	pass # Replace with function body.


func _on_big_office_computer_3_pressed() -> void:
	pass # Replace with function body.


func _on_head_office_computer_pressed() -> void:
	pass # Replace with function body.
