extends Node

func _on_office_router_pressed() -> void:
	pass # Replace with function body.

func _on_head_office_router_pressed() -> void:
	pass # Replace with function body.

func _on_big_office_router_1_pressed() -> void:
	pass # Replace with function body.

func _on_big_office_router_2_pressed() -> void:
	pass # Replace with function body.

func _on_big_office_router_3_pressed() -> void:
	pass # Replace with function body.

func _on_tech_room_router_pressed() -> void:
	pass # Replace with function body.

func _on_kitchen_router_pressed() -> void:
	pass # Replace with function body.
